[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools"]
description = "Github Action to run 'cargo audit' on your Rust project"
documentation = "https://docs.rs/audit-check"
edition = "2021"
homepage = "https://github.com/rustyhorde/audit-check"
keywords = ["cargo", "audit", "github", "actions"]
license = "MIT OR Apache-2.0"
name = "audit-check"
readme = "README.md"
repository = "https://github.com/rustyhorde/audit-check"
version = "0.1.1"

[features]
unstable = []

[dependencies]
anyhow = "1.0.87"
lazy_static = "1.5.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "brotli", "json", "trust-dns"] }
rustc_version = "0.4.1"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting"] }
tokio = { version = "1.43.1", features = ["rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3.18", features = ["time"] }

[build-dependencies]
rustversion = "1.0.17"
