[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["development-tools"]
description = "Github Action to run 'cargo audit' on your Rust project"
documentation = "https://docs.rs/audit-check"
edition = "2024"
homepage = "https://github.com/rustyhorde/audit-check"
keywords = ["cargo", "audit", "github", "actions"]
license = "MIT OR Apache-2.0"
name = "audit-check"
readme = "README.md"
repository = "https://github.com/rustyhorde/audit-check"
version = "0.1.1"

[features]
unstable = []

[dependencies]
anyhow = "1.0.97"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "brotli", "json", "trust-dns"] }
rustc_version = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3.19", features = ["time"] }

[build-dependencies]
rustversion = "1.0.20"
